--- a/.github/ISSUE_TEMPLATE/report-bugs.yml
+++ b/.github/ISSUE_TEMPLATE/report-bugs.yml
@@ -7,7 +7,7 @@ assignees:
 body:
   - type: markdown
     attributes:
-      values: Thanks for taking the time to fill out this bug report!
+      value: Thanks for taking the time to fill out this bug report!
   - type: textarea
     id: what-happened
     attributes:
