--- a/.github/ISSUE_TEMPLATE/report-bugs.yml
+++ b/.github/ISSUE_TEMPLATE/report-bugs.yml
@@ -22,11 +22,15 @@ body:
     attributes:
       label: how to redo the bug ?
       description: Tell us how to redo the bug
+    validations:
+      required: true
   - type: input
     id: version
     attributes: 
       label: What version do you use
       value: "v"
+    validations:
+      required: true
       
       
       
