--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blanc_issues_enabled: true
 contact_links:
   - name: Discord
-    url: https://whois.mrrobot.app
+    url: https://whois.mrrobot.app/315136931166158849
     about: Here my discord account
