--- a/package.json
+++ b/package.json
@@ -6,7 +6,21 @@
   "scripts": {
     "test": "echo \"No test specified\""
   },
-  "keywords": [],
+  "keywords": [
+    "discord activities",
+    "discordjs activities",
+    "discord activity",
+    "discord together",
+    "discord 2gether",
+    "watch2gether",
+    "youtube",
+    "discord.js",
+    "together",
+    "discord",
+    "youtube",
+    "videos",
+    "poker"
+  ],
   "author": "ena0",
   "license": "ISC",
   "dependencies": {
